add_executable(hello_server hello_server.cpp)
add_executable(hello_client hello_client.cpp)

add_executable(low_open low_open.cpp)
add_executable(low_read low_read.cpp)

add_executable(fd_seri fd_seri.cpp)

add_executable(tcp_client tcp_client.cpp)

add_executable(endian_conv endian_conv.cpp)

add_executable(inet_addr inet_addr.cpp)
add_executable(inet_aton inet_aton.cpp)
add_executable(inet_ntoa inet_ntoa.cpp)

add_executable(echo_server echo_server.cpp)
add_executable(echo_client echo_client.cpp)
add_executable(echo_client2 echo_client2.cpp)
add_executable(uecho_con_client uecho_con_client.cpp)

add_executable(op_server op_server.cpp)
add_executable(op_client op_client.cpp)

add_executable(uecho_client uecho_client.cpp)
add_executable(uecho_server uecho_server.cpp)

add_executable(bound_host1 bount_host1.cpp)
add_executable(bound_host2 bound_host2.cpp)

add_executable(file_client file_client.cpp)
add_executable(file_server file_server.cpp)

add_executable(gethostbyname gethostbyname.cpp)
add_executable(gethostbyaddr gethostbyaddr.cpp)

add_executable(sock_type sock_type.cpp)
add_executable(get_buf get_buf.cpp)
add_executable(set_buf set_buf.cpp)

add_executable(reuseadr_eserver reuseadr_eserver.cpp)