add_executable(fork fork.cpp)
add_executable(zombie zombie.cpp)
add_executable(wait wait.cpp)
add_executable(waitpid waitpid.cpp)
add_executable(signal signal.cpp)
add_executable(sigaction sigaction.cpp)
add_executable(remove_zombie remove_zombie.cpp)

add_executable(echo_mpserver echo_mpserver.cpp)
add_executable(echo_mpclient echo_mpclient.cpp)

add_executable(pipe1 pipe1.cpp)
add_executable(pipe2 pipe2.cpp)
add_executable(pipe3 pipe3.cpp)

add_executable(echo_storeserv echo_storeserv.cpp)