add_executable(select select.cpp)
add_executable(echo_selectserv echo_selectserv.cpp)

add_executable(oob_send oob_send.cpp)
add_executable(oob_recv oob_recv.cpp)

add_executable(peek_recv peek_recv.cpp)
add_executable(peek_send peek_send.cpp)

add_executable(writev writev.cpp)
add_executable(readv readv.cpp)

add_executable(news_receiver news_receiver.cpp)
add_executable(news_sender news_sender.cpp)

add_executable(news_receiver_brd news_receiver_brd.cpp)
add_executable(news_sender_brd news_sender_brd.cpp)