add_executable(desto desto.cpp)
add_executable(todes todes.cpp)

add_executable(echo_stdserv echo_stdserv.cpp)
add_executable(echo_stdclnt echo_stdclnt.cpp)

add_executable(sep_clnt sep_clnt.cpp)
add_executable(sep_serv sep_serv.cpp)
add_executable(sep_serv2 sep_serv2.cpp)

add_executable(dup dup.cpp)

add_executable(echo_epollserv echo_epollserv.cpp)
add_executable(echo_EPLTserv echo_EPLTserv.cpp)
add_executable(echo_EPETserv echo_EPETserv.cpp)